--- a/src/styles.css
+++ b/src/styles.css
@@ -14,16 +14,37 @@ body {
 }
 
 ul.dijkstra_grid {
-  height: 1000px;
+  margin: none;
+  height: 800px;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
-  grid-gap: 10px;
+  grid-template-columns: repeat(40, 1fr);
+  grid-template-rows: repeat(32, 1fr);
+  
 }
 
 ul.dijkstra_grid > li {
   background-color: cadetblue;
+  height: 25px;
+  width: 25px;
   line-height: 5em;
+  border: .5px solid white;
+  position: relative;
+}
+ul.dijkstra_grid > li button {
+  height: 23px;
+  width: 23px;
+  border-radius: 50%;
+  border: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+button.origin {
+  background-color: white;
+  border: none;
+}
+button.target {
+  background-color: rgb(255, 0, 0);
 }
 ul.dijkstra_grid > li.selected {
   background-color: #3f8285;
